templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: "${chart-name}"
  name: "${app-name}-ingress"
  namespace: "${namespace}"
  annotations:
    cert-manager.io/cluster-issuer: "${cluster-issuer}"
spec:
  rules:
  - host: "${endpoint-fqdn}"
    http:
      paths:
      - backend:
          service:
            name: "${app-name}-${chart-name}"
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "${endpoint-fqdn}"
    secretName: "${cluster-issuer}" # secret name, same as the privateKeySecretRef in the (Cluster)Issuer
