templates/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "${release-name}"
  namespace: "${namespace}"
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - kube-system
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchExpressions:
              - key: k8s-app
                operator: In
                values:
                  - kube-dns
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 443
          protocol: TCP
        - port: 8448
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 192.168.0.0/16
              - 172.16.0.0/12
   - ports:
        - port: 443
          protocol: TCP
      to:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - cattle-provisioning-capi-system
            matchLabels:
              kubernetes.io/metadata.name: cattle-provisioning-capi-system
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - kube-system
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - traefik
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8008
          protocol: TCP
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
