templates/network_policy_redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "${release_name}-redis"
  namespace: "${namespace}"
spec:
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/instance
                operator: In
                values:
                  - "${release_name}"
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - "${release_name}-synapse"
            matchLabels:
              app.kubernetes.io/instance: "${release_name}"
              app.kubernetes.io/name: "${release_name}-synapse"
      ports:
        - port: 6379
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: "${release_name}"
      app.kubernetes.io/name: redis
  policyTypes:
    - Ingress
    - Egress
