templates/network_policy_signkey-job.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "${release_name}-signingkey-job"
  namespace: "${namespace}"
spec:
  egress:
    - ports:
        - port: 443
          protocol: TCP
        - port: 6443
          protocol: TCP
      to:
        - ipBlock:
            cidr: 10.0.0.0/8
            matchLabels:
              kubernetes.io/metadata.name: default
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: "${release_name}"
      app.kubernetes.io/component: signingkey-job
  policyTypes:
    - Ingress
    - Egress
