templates/network_policy_synapse.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "${release-name}-synapse"
  namespace: "${namespace}"
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - kube-system
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchExpressions:
              - key: k8s-app
                operator: In
                values:
                  - kube-dns
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 443
          protocol: TCP
        - port: 8448
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 192.168.0.0/16
              - 172.16.0.0/12
    - ports:
        - port: 5432
          protocol: TCP
      to:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - postgresql
            matchLabels:
              app.kubernetes.io/instance: matrix
              app.kubernetes.io/name: postgresql
    - ports:
        - port: 6379
          protocol: TCP
      to:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - redis
              - key: app.kubernetes.io/instance
                operator: In
                values:
                  - matrix
            matchLabels:
              app.kubernetes.io/instance: matrix
              app.kubernetes.io/name: redis
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - traefik
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - traefik
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8008
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: matrix
      app.kubernetes.io/name: matrix-synapse
      app.kubernetes.io/component: matrix-synapse
  policyTypes:
    - Ingress
    - Egress
